// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 0 expenses 1`] = `
<div>
  <h1>
    PracticeCom Viewing 
    0
     
    expenses
     totaling 
    $2.25
  </h1>
</div>
`;

exports[`should render 1 expense 1`] = `
<div>
  <h1>
    PracticeCom Viewing 
    1
     
    expense
     totaling 
    $1.25
  </h1>
</div>
`;

exports[`should render PracticeCom correctly 1`] = `
<div>
  <h1>
    PracticeCom Viewing 
     
    expenses
     totaling 
    $0.00
  </h1>
</div>
`;

exports[`should render multiple expenses 1`] = `
<div>
  <h1>
    PracticeCom Viewing 
    4
     
    expenses
     totaling 
    $87.92
  </h1>
</div>
`;
